fixing the problem of not showing the picture of slider,banner,blog and frominsta parts

--- a/style.css
+++ b/style.css
@@ -1032,7 +1032,7 @@ main>div .heading {
 
 .banner {
     background-color: var(--light-color);
-    background-image: url('/assets/banner.png');
+    background-image: url('assets/banner.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position-x: right;
